<resources>
    <string name="app_name">DAA</string>
    <string name="Username">Tên tài khoản</string>
    <string name="Password">Mật khẩu</string>
    <string name="RememberMe">Nhớ mật khẩu</string>
    <string name="Login">Đăng nhập</string>
    <string name="Register">Đăng ký</string>
    <string name="Logo">Logo</string>
    <string name="Email">Email</string>
    <string name="ConfirmPassword">Nhập lại mật khẩu</string>
    <string name="SignUp">Đăng ký</string>
    <string name="registrationPage">Đăng ký tài khoản</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select">Select Item</string>
</resources>